--- a/app/src/main/res/layout/fragment_word_list.xml
+++ b/app/src/main/res/layout/fragment_word_list.xml
@@ -74,6 +74,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:contentDescription="@string/submit"
-        android:src="@drawable/ic_add_24" />
+        app:srcCompat="@drawable/ic_add_24"
+        app:tint="@color/color_black"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
