--- a/app/src/main/res/layout/view_meaning.xml
+++ b/app/src/main/res/layout/view_meaning.xml
@@ -20,7 +20,8 @@
                 android:id="@+id/meaning_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text" />
+                android:inputType="textMultiLine"
+                android:maxLines="3" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,7 +51,8 @@
             android:id="@+id/example_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="textMultiLine"
+            android:maxLines="3" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -67,7 +69,8 @@
             android:id="@+id/synonyms_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="textMultiLine"
+            android:maxLines="3" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
