--- a/app/src/main/res/layout/view_part_of_speech.xml
+++ b/app/src/main/res/layout/view_part_of_speech.xml
@@ -55,7 +55,8 @@
             android:id="@+id/translation_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="textMultiLine"
+            android:maxLines="2" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
