--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -16,7 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/pronounce_word"
+        app:layout_constraintEnd_toStartOf="@id/add_to_favorite"
         android:layout_marginEnd="16dp">
 
         <TextView
@@ -52,19 +52,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/color_white" />
+        app:tint="@color/color_state_btn_icon_add_to_fav" />
 
-    <ImageView
-        android:id="@+id/pronounce_word"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:contentDescription="@string/pronounce_word"
-        android:src="@drawable/ic_volume_up_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/add_to_favorite"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/color_white" />
+<!--    <ImageView-->
+<!--        android:id="@+id/pronounce_word"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:contentDescription="@string/pronounce_word"-->
+<!--        android:src="@drawable/ic_volume_up_24"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toStartOf="@id/add_to_favorite"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:tint="@color/color_white" />-->
 
     <!--    <Button-->
 
