--- a/app/src/main/res/color/color_state_btn_icon_add_to_fav.xml
+++ b/app/src/main/res/color/color_state_btn_icon_add_to_fav.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
     android:enterFadeDuration="@android:integer/config_shortAnimTime"
     android:exitFadeDuration="@android:integer/config_shortAnimTime">
+    <item android:color="@color/color_white_45percent" android:state_enabled="false" />
     <item android:color="@color/color_white" android:state_selected="false" />
     <item android:color="@color/color_orange" android:state_selected="true" />
     <item android:color="@color/color_white" />
