Changed "Part of speech" field in fragment_add_new_word.xml to except user input

--- a/app/src/main/res/layout/fragment_add_new_word.xml
+++ b/app/src/main/res/layout/fragment_add_new_word.xml
@@ -49,7 +49,8 @@
                         android:layout_height="wrap_content"
                         android:inputType="textMultiLine"
                         android:maxLines="3"
-                        tools:text="access" />
+                        tools:text="access"
+                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
