--- a/app/src/main/res/menu/word_details_menu.xml
+++ b/app/src/main/res/menu/word_details_menu.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/search"
-        android:contentDescription="@string/search_words_hint"
-        android:icon="@drawable/ic_search_24"
-        android:title="@string/search_words_hint"
-        app:showAsAction="ifRoom" />
+<!--    <item-->
+<!--        android:id="@+id/search"-->
+<!--        android:contentDescription="@string/search_words_hint"-->
+<!--        android:icon="@drawable/ic_search_24"-->
+<!--        android:title="@string/search_words_hint"-->
+<!--        app:showAsAction="ifRoom" />-->
     <item
         android:id="@+id/delete_word"
         android:contentDescription="@string/delete_word"
         android:icon="@drawable/ic_delete_24"
         android:title="@string/delete_word"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 <!--    <item-->
 <!--        android:id="@+id/empty"-->
 <!--        android:icon="@drawable/ic_more_vert_24"-->
