--- a/app/src/main/res/menu/sort_words_menu.xml
+++ b/app/src/main/res/menu/sort_words_menu.xml
@@ -5,5 +5,20 @@
         android:id="@+id/sort_words"
         android:icon="@drawable/ic_arrow_sort_24"
         android:title="@string/sort_words"
-        app:showAsAction="always" />
+        app:showAsAction="always">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:checked="true"
+                    android:id="@+id/sort_by_date"
+                    android:title="@string/sort_by_date" />
+                <item
+                    android:id="@+id/sort_by_word"
+                    android:title="@string/sort_by_word" />
+                <item
+                    android:id="@+id/sort_by_favorite"
+                    android:title="@string/sort_by_favorite" />
+            </group>
+        </menu>
+    </item>
 </menu>
