--- a/app/src/main/res/values/string_arrays.xml
+++ b/app/src/main/res/values/string_arrays.xml
@@ -10,4 +10,9 @@
         <item>Conjunction</item>
         <item>Interjection</item>
     </string-array>
+    <string-array name="sort_options">
+        <item>Word</item>
+        <item>Date added</item>
+        <item>Favorite</item>
+    </string-array>
 </resources>
